# SkyFi-ATAK-Plugin-v2

./: .env.example  .envrc  .gitignore  .gitlab-ci-fixed.yml  .gitlab-ci.yml  AI_INSTALLATION_GUIDE.md  AI_INTEGRATION_GUIDE.md  ATAK-Plugin-SkyFi-ATAK-Plugin-v2-2.0-beta5--5.3.0-civ-release-SIGNED.aab.idsig  ATAK-Plugin-SkyFi-ATAK-Plugin-v2-2.0-beta5--5.3.0-civ-release-SIGNED.apk.idsig  ATAK_INSTALLATION_GUIDE.md  ATAK_PLUGIN_DEVELOPMENT_GUIDE.md  BETA_TESTING_GUIDE.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CHANGELOG_V1_TO_V2.md  COMPATIBILITY_FIX_SUMMARY.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  Dockerfile  FEATURE_IMPLEMENTATION_V2.md  FIXED_SUBMISSION_SUMMARY.md  FIX_TAKGOV_PIPELINE.md  FROM_EXISTING_SHAPE_IMPLEMENTATION.md  KEYSTORE_CONFIGURATION_FIXED.md  Makefile  ONBOARDING_GUIDE.md  OPACITY_FEATURE_IMPLEMENTATION.md  PLAYSTORE_COMPATIBILITY_FIX.md  PLAYSTORE_SIGNING_INFO.md  PLAY_STORE_COMPATIBILITY_FIX.md  PRD_SKYFI_ATAK_V2.md  PREVIEW_IMPLEMENTATION_SUMMARY.md  QA_TEST_REPORT.md  QUICK_SETUP_GUIDE.md  README-JAVA-SETUP.md  README.md  SCREENSHOTS.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_RECOMMENDATIONS.md  SETUP_CREDENTIALS.md  (+58 more)
tak-source-submission/SkyFi-ATAK-Plugin-v2-SOURCE-20250808-180335/trusty-tool/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
tak-source-submission/SkyFi-ATAK-Plugin-v2-SOURCE-20250808-180335/trusty-tool/examples/: README.md  import_test.json  import_test.md  import_test.yaml
tak-source-submission/SkyFi-ATAK-Plugin-v2-SOURCE-20250808-180335/trusty-tool/src/: advice.rs  agent.rs  claude_integration.rs  cli.rs  display.rs  (+8 more)
(+991 files in other folders)
