[package]
name = "trusty"
version = "0.1.0"
edition = "2021"
authors = ["Trusty Contributors"]
description = "Task management for Claude Code - AI-powered task decomposition, dependency tracking, and intelligent pruning"
repository = "https://github.com/yourusername/trusty"
license = "MIT"
readme = "README.md"
keywords = ["task-management", "cli", "productivity", "ai", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
comfy-table = "7.1"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
